--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           context: ./docker
           push: true
-          tags: linhbngo/go_server:latest
+          tags: dannyhal01/go_server:latest
